<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:paddingTop="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layoutCheckEmail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rouded_top_bg">

        <ImageView
            android:id="@+id/ic_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_close_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/envelopeAnimation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="110dp"
            android:layout_marginBottom="320dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/resend_email_animation"/>

        <TextView
            android:id="@+id/tvCheckEmail"
            style="@style/h1_28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_your_email"
            app:layout_constraintTop_toBottomOf="@id/envelopeAnimation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvHint"
            style="@style/h2_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sent_reset_password_email_hint"
            app:layout_constraintTop_toBottomOf="@id/tvCheckEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvResendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/resend_reset_password_email_text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/bg_green_button"
            android:backgroundTint="#fff"
            android:elevation="4dp"
            android:textColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/tvHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/emailHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_spam_hint"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="@style/button_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_email_app"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/_600sdp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layoutResendEmail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@drawable/rouded_top_bg">

        <TextView
            android:id="@+id/tvNoMail"
            style="@style/h1_28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_get_mail"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvNoMailHint"
            style="@style/h2_16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_get_mail_hint"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintTop_toBottomOf="@id/tvNoMail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvSendEmailAgain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:enabled="false"
            android:text="@string/send_email_again"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:background="@drawable/bg_rounded_disabled"
            android:elevation="4dp"
            android:textColor="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/tvNoMailHint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvChangeEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/change_email_address"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:background="@drawable/bg_green_button"
            android:backgroundTint="#fff"
            android:elevation="4dp"
            android:textColor="@color/blue"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@id/tvSendEmailAgain"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
